--- a/style/index.css
+++ b/style/index.css
@@ -2,11 +2,9 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
 html {
     background-color: #333;
 }
-
 
 .container {
     display: grid;
@@ -31,7 +29,14 @@ html {
     text-align: center;
 }
 
-.emailinput {
+.lable {
+    color: #fff;
+    font-size: 1.25em;
+    margin: 0px;
+    text-emphasis: bold;
+}
+
+.usernameinput {
     width: 25%;
     padding: 12px 20px;
     margin: 8px 0;
